# elm-language-server-rs

./: .gitignore  Cargo.toml  README.md  elm.json  main.rs  readme.md
review/src/: ReviewConfig.elm
src/: ElmParserLenient.elm  ElmSyntax.elm  ElmSyntaxHighlight.elm  Exports.elm  ParserFast.elm  RangeDict.elm  TextGrid.elm  Unicode.elm  main.rs
tests/: Tests.elm
vscode/: elm-language-server-rs-0.0.1.vsix  extension.ts  package.json  readme.md
vscode/syntaxes/: codeblock.json
zed/: Cargo.toml  LICENSE  extension.toml
zed/icon_themes/: gren_icon_theme.json
zed/languages/elm/: config.toml
zed/src/: lib.rs
