[package]
name = "elm-language-server-rs"
edition = "2024"

[dependencies]
async-lsp = { version = "0.2.2", features = ["tokio"] }
lsp-types = "0.95.1"
tower = "0.5.2"
tokio = { version = "1.47.1", features = [
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt",
    "time",
] }
bumpalo = "3.19.0"

[profile.dev]
# disabling debug info speeds up builds a bunch
debug = "none"
# required to enable tail-call-elimination.
# Without, the lsp stack overflows on medium to large files
opt-level = 1
