cargo-features = ["codegen-backend"]
[package]
name = "elm-language-server-rs"
edition = "2024"

[[bin]]
name = "elm-language-server-rs"
path = "main.rs"

[dependencies]
async-lsp = { version = "0.2.2", features = ["tokio"] }
lsp-types = "0.95.1"
tower = "0.5.2"
tokio = { version = "1.47.1", features = ["macros", "rt"] }
serde_json = "1.0.145"

[profile.dev]
# disabling debug info speeds up build
debug = "none"
# >= 1 required to enable tail-call-elimination.
# Without, the lsp stack overflows on medium to large files.
# Here, I chose to do 2 to get a more realistic feel for the release performance
# but please do switch to 1 locally if you need faster compile times
opt-level = 2
# speeds up build a ton (about 6-10+ times)
codegen-backend = "cranelift"
[profile.dev.package."*"]
debug = false
